<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingStart="@dimen/keyline_4"
    android:paddingTop="@dimen/keyline_5"
    android:paddingEnd="@dimen/keyline_4"
    android:paddingBottom="@dimen/keyline_5">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/component_label_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/keyline_2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/author"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="?alphaEmphasisMedium"
                android:gravity="start|center_vertical"
                android:text="@string/author_textview"
                android:textAppearance="?textAppearanceOverline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_textview"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="?alphaEmphasisMedium"
                android:gravity="end|center_vertical"

                android:text="@string/date_textview"
                android:textAppearance="?textAppearanceOverline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/url_image"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/keyline_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author"
                app:srcCompat="@drawable/sample_image"
                app:tint="@color/color_surface"
                app:tintMode="multiply" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginTop="@dimen/keyline_4"
                android:alpha="?alphaEmphasisMedium"
                android:text="@string/title_textview"
                android:textAppearance="?textAppearanceOverline"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/url_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/full_description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginTop="@dimen/keyline_4"
                android:alpha="?alphaEmphasisMedium"
                android:text="@string/full_description_textview"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_textview" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/content_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginTop="@dimen/keyline_2"
                android:alpha="?alphaEmphasisMedium"
                android:text="@string/content_textview"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/full_description_textview" />

            <com.google.android.material.button.MaterialButton
                style="?materialCardViewStyle"
                android:id="@+id/link_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_2"
                android:layout_marginTop="@dimen/keyline_5"
                android:layout_marginEnd="@dimen/keyline_0"
                android:layout_marginBottom="@dimen/keyline_2"
                android:fontFamily="@font/roboto_black_italic"
                android:text="@string/link_open_text"
                android:textAllCaps="false"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>